# libjstudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: types.h  util.hpp
include/engine/: directors.hpp  engine.hpp  enginedata.hpp  functionvalues.hpp  objects.hpp
include/engine/director/: director.hpp  director_actor.hpp  director_camera.hpp  director_control.hpp  director_message.hpp  director_particle.hpp  director_sound.hpp
include/engine/object/: director.hpp  director_actor.hpp  director_camera.hpp  director_control.hpp  director_message.hpp  director_particle.hpp  director_sound.hpp  functionvalue.hpp  object.hpp  object_actor.hpp  object_camera.hpp  object_control.hpp  object_message.hpp  object_particle.hpp  object_sound.hpp  variablevalue.hpp
include/engine/track/: key.hpp  meta.hpp  track.hpp
include/engine/value/: extrapolation.hpp  functionvalue.hpp  functionvalueattribute_interpolate.hpp  functionvalueattribute_range.hpp  functionvalueattribute_refer.hpp  functionvaluecomposite.hpp  functionvalueconstant.hpp  functionvaluehermite.hpp  functionvaluelist.hpp  functionvaluelistparameter.hpp  functionvaluerange.hpp  functionvaluetransition.hpp  interpolateattribute.hpp  interpolation.hpp  rangeattribute.hpp  referattribute.hpp  variablevalue.hpp
include/io/: constants.hpp  fvb.hpp  stb.hpp
src/: util.cpp
src/engine/: engine.cpp  enginedata.cpp
src/engine/director/: director.cpp  director_actor.cpp  director_camera.cpp  director_control.cpp  director_message.cpp  director_particle.cpp  director_sound.cpp
src/engine/object/: director.cpp  director_actor.cpp  director_camera.cpp  director_control.cpp  director_message.cpp  director_particle.cpp  director_sound.cpp  object.cpp  object_actor.cpp  object_camera.cpp  object_sound.cpp  (+4 more)
src/io/: fvb.cpp  stb.cpp
src/tester/: main.cpp
(+16 files in other folders)
